Fixed cutoffs
This fixes the times and status being cut off on the print view

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -29,10 +29,10 @@
     box-shadow: none !important;
     outline: none !important;
     width: inherit !important;
-    height: inherit !important;
-    line-height: inherit !important;
+    height: 15px !important;
+    line-height: 15px !important;
+    vertical-align: middle !important;
     padding: 0 !important;
-    margin: 0 !important;
   }
 
   select {
